Fixed logo being squished

--- a/main.css
+++ b/main.css
@@ -30,12 +30,12 @@ body {
 }
 .wrapper-banner {
     width : 100%;
-    height : 60vh;
+    height : 35vw;
 }
 .homepage-banner {
     user-select: none;
-    width : 80%;
-    height: 60vh;
+    width : 60%;
+    height: 30vw;
 }
 
 .wrapper-main-content {
